Minor corrections in songs and a few new songs.

--- a/songs/Ani_K_Stáru.tex
+++ b/songs/Ani_K_Stáru.tex
@@ -29,5 +29,5 @@ nemám \[Gm]o životě páru, nemám páru,\brk
 Až mi\[C] tváře zcela zblednou zcela zblednou,\brk
 dal bych \[Gm]si ho ještě jednou, ještě jednou,\brk
 třeba s \[F]vámi, třeba \[Em]s vámi, chcete-\[C]li.   \[C7]         \brk
-Třeba s \[F]vámi, milé d\[G]ámy,  A D G B\[C]     Uhlir - Ani K Stáru  Uhlir - Ani K Stáru  Uhlir - Ani K Stáru\brk
+Třeba s \[F]vámi, milé d\[G]ámy chcete-\[C]li.
 \endchorus\endsong
