--- a/songs/Behind_Blue_Eyes.tex
+++ b/songs/Behind_Blue_Eyes.tex
@@ -39,5 +39,5 @@ My love is \[D]vengeance that's never \[Asus2]free\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
 \[Em]No one knows what it's \[G]like, to be the \[Dsus2]bad man,\brk
-To be the \[C]sad man, be\[A]hind blue  of Chorusquot;,quo\brk
+To be the \[C]sad man, be\[A]hind blue eyes\brk
 }\endverse\endsong
