--- a/songs/Bláznova_Ukolébavka.tex
+++ b/songs/Bláznova_Ukolébavka.tex
@@ -35,5 +35,5 @@ když \[G]tebe tu \[A]mám.\brk
 Vždyť \[D]přijdou se \[G]ptát,\brk
 zítra zas \[D]přijdou se \[G]ptát,\brk
 jestli ty v \[D]mých představá\[G]ch\brk
-už \[D]  A D G B    Dydovič - Bláznova Ukolébavka  Dydovič - Bláznova Ukolébavka  Dydovič - Bláznova Ukolébavka\brk
+už \[D]  mizíš.
 \endchorus\endsong
