--- a/songs/Boli_Sme_Raz_Milovaní.tex
+++ b/songs/Boli_Sme_Raz_Milovaní.tex
@@ -38,5 +38,5 @@
 \[F#m]Boli \[E]lásky \[A]na pár \[H]dní\brk
 \[C#m]Boli \[A]sme raz \[E]milovaní\brk
 \[F#m]A tak bu\[E]deme raz, \[A]spase\[H]ní \[C#m]   \[F#]         \brk
-\[F#m]A tak bu\[E]deme raz, \[A]budeme raz \[H] A D \[E]G B  Stále Som Tu   Habera - Boli Sme Raz Milovaní  Habera - Boli Sme Raz Milovaní  Habera - Boli Sme Raz Milovaní   \brk
+\[F#m]A tak bu\[E]deme raz, \[A]budeme raz \[H] spaseni.
 \endchorus\endsong
