--- a/songs/Demons.tex
+++ b/songs/Demons.tex
@@ -74,5 +74,5 @@ It's where my demons \[C]hide\brk
 Don't get too \[G]close\brk
 It's dark in\[Am]side\brk
 It's where my demons \[F]hide\brk
-It's where my demons \[C] A D G B        whats the strumming  use D D DU UD  IS AMAZING     Me  Her    Her          Of   Me   Dragons - Demons  Dragons - Demons  Dragons - Demons   \brk
+It's where my demons \[C] hide.
 \endchorus\endsong
