--- a/songs/Do_Nebe.tex
+++ b/songs/Do_Nebe.tex
@@ -33,5 +33,5 @@ do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\
 do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
-\[C]Jsi moje vě\[C]čná ,úža\[C]sná  A\[G] D G B     akordy a text k pisni Inzerat od Tomase Kluse. Includes chords and lyrics to song Inzerat by Tomas      Text a akordy k pisni Az... od Tomase Kluse. Includes lyrics and chords to song Az... by Tomas    Klus - Do Nebe  Klus - Do Nebe  Klus - Do Nebe\brk
+\[C]Jsi moje vě\[C]čná ,úža\[C]sná  slečna.
 }\endverse\endsong
