--- a/songs/Dobrák_Od_Kosti.tex
+++ b/songs/Dobrák_Od_Kosti.tex
@@ -19,5 +19,5 @@ jenom \[A]blázen věří na nesmysly \brk
 \[D]Je to vážně silná káva, \[A]pláč a nebo vztek \[G]nic už s tím nenadě\[C]láš \brk
 \[D]nech mě jenom hádat, jak \[A]jsi hebká na dotek  \[G]krásná a nedospělá \brk
 \[D]Má milá jak \[A]ti je, tak jak \[G]ti je? \brk
-\[D]Jsem ten, kdo j\[A]ednou tvý tělo\[G] zakryje.  O\[G]d    Monsters and  Sound Of  amp;  Child O  N'    some chords, now it should be   Monsters and     Great Big  amp;     for acoustic guitar with original song structure and C to D   - Dobrák Od Kosti  - Dobrák Od Kosti  - Dobrák Od Kosti\brk
+\[D]Jsem ten, kdo j\[A]ednou tvý tělo\[G] zakryje.
 \endverse\endsong
