--- a/songs/Fair_Play.tex
+++ b/songs/Fair_Play.tex
@@ -8,14 +8,14 @@ Tou cestou \[F]širokou vždy kráčaj \[Am]bez okov,\brk
 ak nechceš \[Dm]priveľa, tak dojdeš \[Bb]do cieľa.\brk
 \endverse
 \beginchorus
-\[F]Oacute;, život \[Am]nehrá fér, čítam z tv\[Dm]ojich pier\[Bb], hmm-hmm,\brk
+\[F]ó, život \[Am]nehrá fér, čítam z tv\[Dm]ojich pier\[Bb], hmm-hmm,\brk
 \[F]ó, život nehrá \[Am]fér, aj tak stále \[Dm]ver, hmm-\[Bb]hmm.\brk
 \endchorus
 \beginverse*{\nolyrics [Bridge]: 
 \[F]  \[Am]   \[Dm]   \[Bb]         \brk
 }\endverse
 \beginchorus
-\[F]Oacute;, život \[Am]nehrá fér, čítam z tv\[Dm]ojich pier\[Bb], hmm-hmm,\brk
+\[F]ó, život \[Am]nehrá fér, čítam z tv\[Dm]ojich pier\[Bb], hmm-hmm,\brk
 \[F]ó, život nehrá \[Am]fér, aj tak stále \[Dm]ver, hmm-\[Bb]hmm.\brk
 \endchorus
 \beginverse
@@ -27,5 +27,5 @@ Tou cestou \[F]širokou vždy kráčaj \[Am]bez okov,\brk
 ak nechceš \[Dm]priveľa, tak dojdeš \[Bb]do cieľa.\brk
 \endverse
 \beginverse*{\nolyrics [Outro]: 
-\[F]Oacute;, život \[Am]nehrá  A D G B    Slepých    Našich   song, hope everything is fine and  Bolí To   of Miro Zbirka. Video:  Žbirka - Fair Play  Žbirka - Fair Play  Žbirka - Fair Play\brk
+\[F]ó, život \[Am]nehrá  A D G B 
 }\endverse\endsong
