--- a/songs/Jdou_Po_Mně_Jdou.tex
+++ b/songs/Jdou_Po_Mně_Jdou.tex
@@ -52,5 +52,5 @@ pípu jsem \[F#m]utáh' a \[Bm]straním se \[A]žen,\brk
 Jdou po mně, \[D]jdou, \[G]jdou, \[D]jdou,\brk
 na nočních \[F#m]stolcích ma\[Bm]jí fotku \[A]mou,\brk
 \[G]kdyby mě \[D]klofli, \[A]jó, byl by \[Bm]ring,\brk
-\[G]žít pod pan\[D]toflí je \[C]hůř než v   A D\[G] G B  \[A]  S\[D]e  \[G] Mi\[D] Na\[A] Kr\[D]k Dala   mi na krk dala klic:  Ráno V   version for strumming (Source: pisnicky-akordy/jarek-nohavica/zitra-rano-v-pet, Corrected and  Nohavica - Jdou Po Mně Jdou  Nohavica - Jdou Po Mně Jdou  Nohavica - Jdou Po Mně Jdou\brk
+\[G]žít pod pan\[D]toflí je \[C]hůř než v Singsing.
 \endchorus\endsong
