--- a/songs/Milenci_V_Texaskách.tex
+++ b/songs/Milenci_V_Texaskách.tex
@@ -18,5 +18,5 @@ t\[F]ak jeden mladík\[Dm] s jednou s\[Em]lečn\[F]ou se spolu oct\[G7]li na tra
 k\[C]éž dojedou až na ko\[Am]nečnou\[F], kéž na trati se nezt\[Am]ratí\brk
 \endverse
 \beginverse*{\nolyrics [Outro]: 
-k\[C]éž na trati se nezt\[Am]ratí, \[F]kéž na trati se neztra\[Am]tí   A D G B     Zíma - Milenci V Texaskách  Zíma - Milenci V Texaskách  Zíma - Milenci V Texaskách\brk
+k\[C]éž na trati se nezt\[Am]ratí, \[F]kéž na trati se neztra\[Am]tí.
 }\endverse\endsong
