--- a/songs/Netušim.tex
+++ b/songs/Netušim.tex
@@ -100,5 +100,5 @@ Ne já \[G]nemám šajn.\brk
 \[E]Na na na na \[G]na na na\brk
 \[D]Na na na na na na \[E]na\brk
 \[E]Na na na na \[G]na na na\brk
-Ale \[D]trojka byla by fakt \[E]  A D G B       Horák - Netušim  Horák - Netušim  Horák - Netušim  YEAR  YEAR \brk
+Ale \[D]trojka byla by fakt \[E] fajn.
 \endchorus\endsong
