--- a/songs/Okno_Mé_Lásky.tex
+++ b/songs/Okno_Mé_Lásky.tex
@@ -29,5 +29,5 @@
 \beginverse
 \[C]Kdo tě hladí, když ne\[F] já,\[C] kdo tě svádí, když n\[F]e já,\brk
 \[C]kdo tě zradí když ne \[F]já.\brk
-\[C]Ty, \[F]já, \[C]jsme \[F]my, \[C]my a \[G]náš byl s\[F]vět.[/tab]quot;,quo\brk
+\[C]Ty, \[F]já, \[C]jsme \[F]my, \[C]my a \[G]náš byl s\[F]vět.\brk
 \endverse\endsong
