--- a/songs/Proklínám.tex
+++ b/songs/Proklínám.tex
@@ -21,5 +21,5 @@
 \[C]Sám a \[G]sám \[Am]ať nikdy \[F]úsvit nespatří\[C]š, na ústa \[G]mříž oči oslep\[Am]nou\brk
 \[F]Ať do smrti seš sám\brk
 \[C]Sám a \[G]sám \[Am]ať nikdy \[F]úsvit nespatří\[C]š, na ústa \[G]mříž oči oslep\[Am]nou\brk
-\[F]Ať do smrti seš \[C] A D G B  Of Broken    Starejch  Of The Rising   / correct lyrics / coda / alignment /       Will   Starejch  Of The Rising   / correct lyrics / coda / alignment /     Se Maj Plnit O   song is not available on UG as yet. The chords are a bit simplified compared to original, and the simplifications are outlined at the beginning of the tab. However, the simplified version sounds good with the original song      Všechno Co Si Budeš   Pěkná   Ledecký - Proklínám  Ledecký - Proklínám  Ledecký - Proklínám\brk
+\[F]Ať do smrti seš \[C] sám.\brk
 \endchorus\endsong
