--- a/songs/Sbohem_Galánečko.tex
+++ b/songs/Sbohem_Galánečko.tex
@@ -22,5 +22,5 @@
 \[G]Ale sa ne\[Em]hněvám, \[Am]žes ňa oši\[D]di\[G]la\[A7],\brk
 \[D]ale sa ne\[Bm]hněvám, \[Em]žes ňa oši\[A7]dil\[Dsus4]a,    \[D]         \brk
 \[Am]to ta moja \[D]žízeň,\[G] to ta moja \[Am]žíz\[D7]eň, \[G]ta to zavi\[Am]nil\[D7]a, \[G]         \brk
-\[Am]to ta moja \[D]žízeň,\[G] to ta moja \[Am]žíz\[D7]eň, \[G]ta to  A D\[Am] G \[D7]B  \[G] Křupavých   Redl - Sbohem Galánečko  Redl - Sbohem Galánečko  Redl - Sbohem Galánečko\brk
+\[Am]to ta moja \[D]žízeň,\[G] to ta moja \[Am]žíz\[D7]eň, \[G]ta to  zavi\[Am]nil\[D7]a. \[G] 
 \endverse\endsong
