--- a/songs/Starý_Muž.tex
+++ b/songs/Starý_Muž.tex
@@ -41,6 +41,5 @@ lahodné \[C]víno \[D]ze džbánku\brk
 a \[Bm]štětec a tuš\brk
 a budu \[Em]mlčet jako mlčí\brk
 ti kdo \[C]vědí už\brk
-\[G]starý muž\[Bm]   \[Em]  \[C] \[D]         \brk
-\[G]starý  A \[Bm]D G B   Se   Po Mně   a text - Chords and  Jiřího Z   one is simplified for 1 acoustic guitar. Two language version- original Czech by Jaromir Nohavica and Polish by Zbigniew  Dva     Nohavica - Starý Muž  Nohavica - Starý Muž  Nohavica - Starý Muž   \brk
+\[G]starý muž.\[Bm]   \[Em]  \[C] \[D]         \brk
 \endverse\endsong
