--- a/songs/Dlouhej_Kouř.tex
+++ b/songs/Dlouhej_Kouř.tex
@@ -59,5 +59,5 @@ Pudem \[C]nekonečně dlouhou\brk
 \[D]Vam pam tyda pam - \[C]  dám si ruce \[G]do kapes.\brk
 \[D]Vam pam tyda pam - \[C]dlouhej kouř a \[G]pohoda jazz.\brk
 \[D]Vam pam tyda pam - \[C]  neštěkne po mě \[G]ani pes.\brk
-\[D]Padám a nevim kam - \[C] nečekej, že ti \[G] some ch\[D]ords, now it should be    for acoustic guitar with original song structure and C to D  Je Na  a few chords and their  Kapradi by Chinaski:  version is suitable for beginners as it utilizes simpler chords and does not modulate/change key throughout the song. Original song starts half step down and then modulates  - Dlouhej Kouř  - Dlouhej Kouř  - Dlouhej Kouř\brk
+\[D]Padám a nevim kam - \[C] nečekej, že ti \[G] zavolám.
 }\endverse\endsong
