--- a/songs/Hlídač_Krav.tex
+++ b/songs/Hlídač_Krav.tex
@@ -1,25 +1,40 @@
 \sclearpage\beginsong{Hlídač Krav}[by={Jaromír Nohavica}]
-\beginverse Pam pam pam... 2x                            \[F] \[G] \[C]         \brk
+\beginverse
 \[C]Když jsem byl malý, říkali mi naši, dobře se uč a jez chytrou kaši,\brk
 \[F]až jednou vyrosteš, \[G]budeš doktorem \[C]práv.\brk
+\endverse
+\beginverse
 \[C]Takový doktor sedí pěkně v suchu, bere velký peníze a škrábe se v uchu.\brk
 \[F]Já jim ale na to řek \[G]chci být hlídačem \[C]krav.\brk
+\endverse
+\beginchorus
 \[C]Já chci mít čapku s bambulí nahoře, jíst kaštany a mýt se v lavoře.\brk
 \[F]od rána po celý \[G]den zpívat si \[C]jen...  zpívat si: \[C]pam pam\[F] p\[G]am\[C] ...\brk
+\endchorus
+\beginverse
 \[C]K vánocům mi kupovali hromady knih, co jsem ale vědět chtěl, to nevyčet' jsem z nich.\brk
 \[F]nikde jsem se nedozvěděl, \[G]jak se hlídají \[C]krávy.\brk
+\endverse
+\beginverse
 \[C]ptal jsem se starších a ptal jsem se všech, každý na mě hleděl jako na pytel blech,\brk
 \[F]každý se mě opatrně \[G]tázal na moje \[C]zdraví.\brk
+\endverse
+\beginchorus
 \[C]Já chci mít čapku s bambulí nahoře, jíst kaštany a mýt se v lavoře.\brk
 \[F]od rána po celý \[G]den zpívat si \[C]jen...  zpívat si: \[C]pam pam\[F] p\[G]am\[C] ...\brk
+\endchorus
+\beginverse
 \[C]Dnes už jsem starší a vím, co vím, mnohé věci nemůžu a mnohé smím,\brk
 \[F]a když je mi velmi smutno, \[G]lehnu do mokré trá\[C]vy.\brk
+\endverse
+\beginverse
 \[C]S nohama křížem a s rukama za hlavou, koukám nahoru na oblohu modravou,\brk
 \[F]kde se mezi mraky honí \[G]moje strakaté \[C]krávy.\brk
+\endverse
+\beginchorus
 \[C]Já chci mít čapku s bambulí nahoře, jíst kaštany a mýt se v lavoře.\brk
 \[F]od rána po celý \[G]den zpívat si \[C]jen...  zpívat si: \[C]pam pam\[F] p\[G]am\[C] ...\brk
 \[C]Já chci mít čapku s bambulí nahoře, jíst kaštany a mýt se v lavoře.\brk
 \[F]od rána po celý \[G]den zpívat si \[C]jen...\brk
 zpívat si: \[C]pam pam\[F] p\[G]am\[C] ...\brk
-\[D]pa\[G]m \[A]pa\[D]m pam        I Want For Christmas Is     Day Reckoning  Avidan amp; the   Se    Po Mně   a text - Chords and   Mě Brali Za   Jizvu Na       Day Reckoning  Avidan amp; the  Nohavica - Hlídač Krav  Nohavica - Hlídač Krav  Nohavica - Hlídač Krav   \brk
-\endverse\endsong
+\endchorus\endsong
