--- a/songs/Proklínám.tex
+++ b/songs/Proklínám.tex
@@ -1,7 +1,7 @@
 \sclearpage\beginsong{Proklínám}[by={Janek Ledecký}]
 \beginverse
 \[Am]Prázdnej byt je \[F]jako past, kde r\[Dm]ůže uvad\[C]nou \[G]         \brk
-\[Am]Potisící \[F]čtu tvůj dopis\[Dm] na rozloučenou\brk
+\[Am]Potisící \[F]čtu tvůj dopis\[Dm] na rozloučenou\[G]\brk
 \[C]Píšeš, že o\[Am]dcházíš, když \[F]den se s nocí s\[C]tříd\[G]á\brk
 \[Am]Vodu z vína \[F]udělá, kdo \[Dm]dobře nehlíd\[G]á, píšeš:\brk
 \endverse
@@ -11,8 +11,8 @@
 \[F]Ať do smrti seš \[C]sám       \[G]         \brk
 \endchorus
 \beginverse
-\[Am]Tvoje oči jsou j\[F]ak stín a tvář den, kd\[Dm]yž se st\[C]mívá\brk
-\[Am]Stromy ros\[F]tou čím dál výš a\[Dm] pak je čeká pád\brk
+\[Am]Tvoje oči jsou j\[F]ak stín a tvář \[Dm]den, když se st\[C]mívá\[G]\brk
+\[Am]Stromy ros\[F]tou čím dál výš a\[Dm] pak je čeká pád\[G]\brk
 \[C]Sám s hlavou s\[Am]kloněnou, všec\[F]hny lásky bud\[C]ou zdán\[G]í\brk
 \[Am]Potisící čtu t\[F]vůj dopis na \[Dm]rozloučeno\[G]u, píšeš:\brk
 \endverse
