Small update in adding of song.

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri Feb 17 17:04:36 CST 2023 by link-doc
+% Automatically generated at Wed Mar  1 00:39:24 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -19,6 +19,7 @@
 \input{songs/Boulevard_Of_Broken_Dreams}
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
 \input{songs/Bára}
+\input{songs/Cant_Help_Falling_In_Love}
 \input{songs/Cesta}
 \input{songs/Cesta_Z_Města}
 \input{songs/Chci_Zas_V_Tobě_Spát}
@@ -155,6 +156,8 @@
 \input{songs/ŽŽ_HonzikSongs/Matfyzák_Na_Discu}
 \input{songs/ŽŽ_HonzikSongs/Sweater_Weather}
 \input{songs/ŽŽ_HonzikSongs/The_Middle}
+\input{songs/ŽŽ_KikiSongs/AA_intro}
+\input{songs/ŽŽ_KikiSongs/A_Star_Is_Born_-_Shallow}
 \input{songs/ŽŽ_LuckaSongs/AA_intro}
 \input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
 \input{songs/ŽŽ_Ybokem/AA_intro}
