Editing of the database from html, repairs.

--- a/songs/ŽŽ_KikiSongs/Shallow.tex
+++ b/songs/ŽŽ_KikiSongs/Shallow.tex
@@ -1,4 +1,4 @@
-\sclearpage\beginsong{A Star Is Born - Shallow}[by={Misc Soundtrack}]
+\sclearpage\beginsong{Shallow}[by={Misc Soundtrack}]
 \beginverse
 \[Em7]Tell me som\[D/F#]ething gir\[G]l...\brk
 \[C]Are you happy in this mod\[G]ern wor\[D]ld?\brk
