Change the text of the song.

--- a/songs/1970.tex
+++ b/songs/1970.tex
@@ -3,7 +3,7 @@
 \beginverse*{\nolyrics Intro: \[C]    \[D]    \[F]    \[C]         \brk
 }\endverse
 \beginverse
-\[C]Nevim jestli je to\[Dm] znat, mozna by bylo lepsi\brk
+\[C]Nevím jestli je to\[Dm] znát, mozna by bylo lepsi\brk
 \[C/E]lhat, jsem silnej rocnik sedmde\[F]sat, tak zacni pocitat.\brk
 \[C]Nechci tu hloupe vzpom\[Dm]inat, koho taky dneska\brk
 \[C/E]zajima silnej rocnik sedmd\[F]esat, tak zacni pocitat.\brk
