Small repairs in songs (in web btw., seems working)

--- a/songs/Jdou_Po_Mně_Jdou.tex
+++ b/songs/Jdou_Po_Mně_Jdou.tex
@@ -30,9 +30,12 @@ chudičká \[F#m]vdova mi \[Bm]nabídla \[A]byt,\brk
 \[G]tak začla \[D]láska jak z \[G]televi\[D]ze.\brk
 \endverse
 \beginverse
-tobě došlo zlato, mně trpělivost,   \[F#m]          \[Bm]     \[A]         \brk
-tak jsem na cestě a chudý jak veš.              \[D]       \[G]         \[D]         \brk
-tak jsem na cestě a chudý jak veš.              \[D]       \[G]         \[D]         \brk
+Všask \[D]půl roku na to \[G]řekla mi dost\[D],\brk
+tobě došlo \[F#m]zlato, \[Bm]mně trpělivost,\[A]                           \brk
+\[G]sbal svých pár \[D]švestek a \[A]běž si kam \[Bm]chceš \brk
+\[G]tak jsem na \[D]cestě a \[G]chudý jak \[D]veš.          \brk 
+\[G]sbal svých pár \[D]švestek a \[A]běž si kam \[Bm]chceš \brk
+\[G]tak jsem na \[D]cestě a \[G]chudý jak \[D]veš.          \brk      
 \endverse
 \beginchorus
 Jdou po mně, \[D]jdou, \[G]jdou, \[D]jdou,\brk
@@ -52,5 +55,5 @@ pípu jsem \[F#m]utáh' a \[Bm]straním se \[A]žen,\brk
 Jdou po mně, \[D]jdou, \[G]jdou, \[D]jdou,\brk
 na nočních \[F#m]stolcích ma\[Bm]jí fotku \[A]mou,\brk
 \[G]kdyby mě \[D]klofli, \[A]jó, byl by \[Bm]ring,\brk
-\[G]žít pod pan\[D]toflí je \[C]hůř než v Singsing.
+\[G]žít pod pan\[D]toflí je \[C]hůř než v Sing\[G]sing. \[A]  \[D]  \[G]  \[D]         \brk
 \endchorus\endsong
