--- a/songs/Nechte_Zvony_Znít.tex
+++ b/songs/Nechte_Zvony_Znít.tex
@@ -7,7 +7,7 @@ V nich s\[F]tarý ko\[C]stel m\[G]odlí se\[C] mou t\[G]ouhou\brk
 \endverse
 \beginverse
 \[C]Chtěla bych znát p\[G]íseň hrozně dl\[C]ouhou,\brk
-\[C]vyzpívat v ní s\[G]amotu mých dnů,\brk
+\[C]vyzpívat v ní s\[G]amotu mých dnů,\[C]\brk
 Ty \[F]nauči\[C]ls mě \[G]polovi\[C]nu po\[G]uhou\brk
 \[C]a já prosím: ne\[F]chte zvony z\[Bb]nít. \[G]         \brk
 \endverse
@@ -30,5 +30,5 @@ má pí\[F]seň b\[C]ude r\[G]ůst jak kř\[C]ehkej kr\[G]ápník\brk
 má pí\[F]seň b\[C]ude r\[G]ůst jak kř\[C]ehkej kr\[G]ápník\brk
 \[C]a já prosím: ne\[F]chte zvony z\[Bb]nít  \[G]         \brk
 \[C]a já prosím: ne\[F]chte zvony z\[Bb]nít  \[G]         \brk
-\[C]a já prosím: ne\[F]chte zvony  \[Bb]A D G\[G] B   capo, based on czech chords   Kubišová - Nechte Zvony Znít  Kubišová - Nechte Zvony Znít  Kubišová - Nechte Zvony Znít   \brk
+\[C]a já prosím: ne\[F]chte zvony  z\[Bb]nít  \[G]\[C]
 \endchorus\endsong
