--- a/songs/Ring-O-Ding.tex
+++ b/songs/Ring-O-Ding.tex
@@ -21,10 +21,10 @@ má barev  \[C]víc  \[A7]než můžeš  znát,\[D]       \[D7]         \brk
 poslou\[G] chej\brk
 \endverse
 \beginverse
-\[G]A lidé  z\[D]vonkoví ve  zv\[C]oncích zroze ní,\brk
+\[G]A lidé  z\[D]vonkoví ve  zv\[C]oncích zroze ní\[D],\brk
 \[G]když se stane  n\[D]eštěstí, svým  zvonk\[C]em zazvo ní,  \[D]         \brk
 Ring-o-\[C] ding Ring-o-\[D] ding\brk
-Ring-o-\[C] ding\[A7]  Ring-o-\[D] ding\brk
+Ring-o-\[C] ding\[A7]  Ring-o-\[D] ding\[D7]\brk
 poslou\[G] chej\brk
 \endverse
 \beginverse
@@ -35,9 +35,9 @@ Ring-o-\[C] ding\[A7]  á Ring-o- \[D]ding \[D7]         \brk
 poslu\[G] chej\brk
 \endverse
 \beginverse
-\[G]Přichází i  mez\[D]i nás, i  mezi\[C] námi  jsou,\brk
-\[G]na první pohled je  n\[D]epoznáš, když  po u\[C]lici  jdou\brk
-zazvo\[C] ní, když příjde  čas\brk
+\[G]Přichází i  mez\[D]i nás, i  mezi\[C] námi  jsou,\[D]\brk
+\[G]na první pohled je  n\[D]epoznáš, když  po u\[C]lici  jdou\[D]\brk
+zazvo\[C] ní, když příjde  čas\[D]\brk
 kde by \[C] mlčky stál  \[A7]každý  z n\[D]ás,     \[D7]         \brk
 poslou\[G] chej\brk
 \endverse
@@ -57,5 +57,5 @@ poslou\[G] chej\brk
 \endverse
 \beginverse
 \[G]Ring-o-ding-o- \[D]ring-o-ding-o- \[C]ring-o-ding-o \[D]ding\brk
-\[G] Ring-o-ding-o-\[D] ring-o-ding-o-\[C] ring-o-ding-o\[D]  A D G B  Zvony    capo, based o\brk
+\[G] Ring-o-ding-o-\[D] ring-o-ding-o-\[C] ring-o-ding-o\[D]ding.
 \endverse\endsong
