--- a/songs/Starý_Muž.tex
+++ b/songs/Starý_Muž.tex
@@ -28,7 +28,7 @@ a \[Bm]štětec a tuš\brk
 a budu \[Em]pozorovat lidi\brk
 kam jdou \[D]asi\brk
 a budu \[G]starý \[Bm]muž\[Em]  \[C] \[D]         \brk
-a budu \[G]starý \[Bm]muž\brk
+a budu \[G]starý \[Bm]muž\[Em]  \[C] \[D]\brk
 \endverse
 \beginverse
 \[G]Až budu starým mužem\brk
