--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Wed Mar  1 00:43:59 CST 2023 by link-doc
+% Automatically generated at Wed Mar  1 19:59:31 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -24,7 +24,7 @@
 \input{songs/Cesta_Z_Města}
 \input{songs/Chci_Zas_V_Tobě_Spát}
 \input{songs/Co_Z_Tebe_Bude}
-\input{songs/Darmodej}
+\input{songs/Darmoděj}
 \input{songs/Dej_Mi_Víc_Své_Lásky}
 \input{songs/Demons}
 \input{songs/Dlouhej_Kouř}
@@ -102,7 +102,6 @@
 \input{songs/Proměny}
 \input{songs/Ring-O-Ding}
 \input{songs/Riptide}
-\input{songs/Runaway_Train}
 \input{songs/Ráda_Se_Miluje}
 \input{songs/Sbohem_Galánečko}
 \input{songs/Sbírka_Zvadlejch_Růží}
@@ -122,6 +121,7 @@
 \input{songs/Umbrella}
 \input{songs/Untitled}
 \input{songs/V_7_25}
+\input{songs/V_Blbým_Věku}
 \input{songs/V_Lese}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
@@ -157,13 +157,14 @@
 \input{songs/ŽŽ_HonzikSongs/Sweater_Weather}
 \input{songs/ŽŽ_HonzikSongs/The_Middle}
 \input{songs/ŽŽ_KikiSongs/AA_intro}
-\input{songs/ŽŽ_KikiSongs/Star_Is_Born_-_Shallow}
+\input{songs/ŽŽ_KikiSongs/Shallow}
 \input{songs/ŽŽ_LuckaSongs/AA_intro}
 \input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
-\input{songs/ŽŽ_Ybokem/AA_intro}
-\input{songs/ŽŽ_Ybokem/Ayo_Technology}
-\input{songs/ŽŽ_Ybokem/Breakfast_At_Tiffanys}
-\input{songs/ŽŽ_Ybokem/Dont_Go_Breaking_My_Heart}
-\input{songs/ŽŽ_Ybokem/Jdevozem}
-\input{songs/ŽŽ_Ybokem/Not_Fair}
+\input{songs/ŽŽ_YbokemSongs/AA_intro}
+\input{songs/ŽŽ_YbokemSongs/Ayo_Technology}
+\input{songs/ŽŽ_YbokemSongs/Breakfast_At_Tiffanys}
+\input{songs/ŽŽ_YbokemSongs/Dont_Go_Breaking_My_Heart}
+\input{songs/ŽŽ_YbokemSongs/Jdevozem}
+\input{songs/ŽŽ_YbokemSongs/Not_Fair}
+\input{songs/ŽŽ_YbokemSongs/Runaway_Train}
 \input{songs/ŽŽŽ-endsongs}
