--- a/songs/Šaman.tex
+++ b/songs/Šaman.tex
@@ -27,5 +27,5 @@ ten slyší \[A]v dálce bonga z\[E]nít.\brk
 \beginverse
 Kolikr\[A]át se ještě \[D]vrátim abych\[F#m] žil\brk
 a co jsem \[E]nezvlád napra\[D]vil\brk
-chtěl bych \[A]spláchnout jednou  \[E]A D G B   \brk
+chtěl bych \[A]spláchnout jednou  \[E]rád.   \brk
 \endverse\endsong
