Web pdf compilation and to TODO

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Wed Mar  1 19:59:31 CST 2023 by link-doc
+% Automatically generated at Thu Mar  2 01:04:39 UTC 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -70,7 +70,7 @@
 \input{songs/Let_It_Go}
 \input{songs/Living_Next_Door_To_Alice}
 \input{songs/Láska_Na_Vsi}
-\input{songs/Magdalena}
+\input{songs/Magdálena}
 \input{songs/Malování}
 \input{songs/Malá_Dáma}
 \input{songs/Mamma_Mia}
