Updating of the tex files during editation.

--- a/songs/1_Signálnís.tex
+++ b/songs/1_Signálnís.tex
@@ -1,6 +1,6 @@
-\sclearpage\beginsong{1 Signální}[by={Chinaski}]
+\sclearpage\beginsong{1 Signálnís}[by={Chinaskis}]\capo{1}
 \beginverse
-Až si \[G]zejtra ráno \[C]řeknu zase \[Em]jednou provždy dost\brk
+sAž si \[G]zejtra ráno \[C]řeknu zase \[Em]jednou provždy dost\brk
 \[G]právem se mi \[C]budeš tiše \[Em]smát\brk
 jak \[G]omluvit si \[C]svoji slabost, \[Em]nenávist a zlost\brk
 když \[G]za všechno si \[C]můzu vlastně \[Em]sám.\brk
