--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,9 +1,9 @@
 % Index file for Songbook.pdf
-% Automatically generated at Thu Mar  2 01:04:39 UTC 2023 by link-doc
+% Automatically generated at Thu Mar  2 02:46:41 UTC 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
-\input{songs/1_Signální}
+\input{songs/1_Signálnís}
 \input{songs/Accidentally_In_Love}
 \input{songs/Africa}
 \input{songs/Anděl}
