Update in TODO.

--- a/TODO
+++ b/TODO
@@ -2,10 +2,11 @@ TODO:
     1) consistent top interface 
         -- I would maybe do it as a consistent bar
     3) deleting of songs
-    4) editing has to change also tex files (so far only songtext is rewritten)
+    5) managing of owners
 
 FINISHED:
     2) compilation of pdf from web
+    4) editing has to change also tex files (so far only songtext is rewritten)
 ---------------------------------------------------
 230302 -- initialization of the TODO
        -- compilation of the pdf
