Small repairs in songs.

--- a/songs/1970.tex
+++ b/songs/1970.tex
@@ -1,5 +1,5 @@
-\sclearpage\beginsong{1970}[by={Chinaski}]
-\capo{1}
+\sclearpage\beginsong{1970}[by={Chinaski}]\capo{1}
+
 \beginverse*{\nolyrics Intro: \[C]    \[D]    \[F]    \[C]         \brk
 }\endverse
 \beginverse
