--- a/songs/Bad_Bad_Leroy_Brown.tex
+++ b/songs/Bad_Bad_Leroy_Brown.tex
@@ -5,9 +5,10 @@
 Well, the \[G]south side of Chicago\brk
 Is the \[A7]baddest part of town.\brk
 And if you \[B7]go down there\brk
-You better \[C]just beware of a \[D7]man name of \[C]Leroy Bro\[G]wn.\brk
+You better \[C]just beware of a \[D7]man name of \[C]Leroy Bro\[G]wn.\[D7]\brk
 Now, \[G]Leroy more than trouble,\brk
 You see he \[A7]stand about 'bout six foot four.\brk
+All the \[B7]downtown ladies cal\[C]l him "treetop lover."
 All the \[D7]men just \[C]call him sir.\[G]  \[D7]         \brk
 \endverse
 \beginchorus
@@ -24,7 +25,7 @@ in front of \[D7]every\[C]body's \[G]nos\[D7]e\brk
 He got a \[G]custom Continental.\brk
 He got an \[A7]Eldorado too.\brk
 He got a \[B7]thirty-two gun in his \[C]pocket for fun.\brk
-He got a \[D7]razor \[C]in his \[G]shoe.\brk
+He got a \[D7]razor \[C]in his \[G]shoe.\[D7]\brk
 \endverse
 \beginchorus
 And he's \[G]bad, bad, Leroy Brown,\brk
@@ -36,7 +37,7 @@ And \[D7]meaner than a \[C]junkyard do\[G]g. \[D7]         \brk
 Well, \[G]Friday 'bout a week ago,\brk
 \[A7]Leroy's shootin' dice.\brk
 And at the \[B7]edge of the bar sat a \[C]girl name of Doris\brk
-and \[D7]oh, that \[C]girl look \[G]nice\brk
+and \[D7]oh, that \[C]girl look \[G]nice\[D7]\brk
 Well, he \[G]cast his eyes upon her\brk
 and the \[A7]trouble soon began.\brk
 And \[B7]Leroy Brown, he learned a \[C]lesson 'bout messin'\brk
@@ -51,7 +52,7 @@ And \[D7]meaner than a \[C]junkyard do\[G]g. \[D7]         \brk
 \beginverse
 Well, the \[G]two men took to fightin'\brk
 And when they \[A7]pulled them from the floor,\brk
-\[B7]Leroy looked like a \[C]jigsaw puzzle with a \[D7]couple of \[C]pieces \[G]gone.\brk
+\[B7]Leroy looked like a \[C]jigsaw puzzle with a \[D7]couple of \[C]pieces \[G]gone\[D7].\brk
 \endverse
 \beginchorus
 And he's \[G]bad, bad, Leroy Brown,\brk
