--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Thu Mar  2 22:07:50 CST 2023 by link-doc
+% Automatically generated at Mon Mar  6 18:36:45 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -60,6 +60,7 @@
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Když_Nemůžeš_Tak_Přidej}
 \input{songs/Krátke_Lásky}
+\input{songs/Kráľovna_Bielych_Tenisiek}
 \input{songs/Kupte_Si_Hřebeny}
 \input{songs/Kutil}
 \input{songs/Křídla_Z_Mýdla}
@@ -88,6 +89,7 @@
 \input{songs/Nagasaki_Hirošima}
 \input{songs/Nechte_Zvony_Znít}
 \input{songs/Netušim}
+\input{songs/Neviem_Byť_Sám}
 \input{songs/Okno_Mé_Lásky}
 \input{songs/On_Top_Of_The_World}
 \input{songs/Osmý_Den}
@@ -135,13 +137,16 @@
 \input{songs/Wonderwall}
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
+\input{songs/Zejtra_Mám}
 \input{songs/Zombie}
 \input{songs/Čarodějnice_Z_Amesbury}
 \input{songs/Černí_andělé}
+\input{songs/Černý_Brejle}
 \input{songs/Šaman}
 \input{songs/Šrouby_A_Matice}
 \input{songs/ŽŽ_DomcaSongs/AA_intro}
 \input{songs/ŽŽ_DomcaSongs/Better_Together}
+\input{songs/ŽŽ_DomcaSongs/Bosorka}
 \input{songs/ŽŽ_DomcaSongs/Brandy_Youre_A_Fine_Girl}
 \input{songs/ŽŽ_DomcaSongs/Let_My_Love_Open_The_Door}
 \input{songs/ŽŽ_DomcaSongs/Mandy}
@@ -160,6 +165,7 @@
 \input{songs/ŽŽ_KikiSongs/Shallow}
 \input{songs/ŽŽ_LuckaSongs/AA_intro}
 \input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
+\input{songs/ŽŽ_YbokemSongs/1_Plus_1}
 \input{songs/ŽŽ_YbokemSongs/AA_intro}
 \input{songs/ŽŽ_YbokemSongs/Ayo_Technology}
 \input{songs/ŽŽ_YbokemSongs/Breakfast_At_Tiffanys}
