Adding of the blank songs added.

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Mar  6 18:36:45 CST 2023 by link-doc
+% Automatically generated at Mon Mar  6 18:58:13 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -86,6 +86,7 @@
 \input{songs/Mám_Doma_Kočku}
 \input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Můj_Svět}
+\input{songs/Naděje}
 \input{songs/Nagasaki_Hirošima}
 \input{songs/Nechte_Zvony_Znít}
 \input{songs/Netušim}
@@ -137,7 +138,6 @@
 \input{songs/Wonderwall}
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
-\input{songs/Zejtra_Mám}
 \input{songs/Zombie}
 \input{songs/Čarodějnice_Z_Amesbury}
 \input{songs/Černí_andělé}
