Adding with wget and file removed not working.

--- a/songs/Zejtra_Mám.tex
+++ b/songs/Zejtra_Mám.tex
@@ -30,5 +30,5 @@ Nebudu  \[C]sám nebudu  \[Bm]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
 Nebudu  \[C]sám nebudu  \[Bm]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
 \[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B]jééé\brk
 Nebudu  \[C]sám nebudu  \[Bm]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
-\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B]  A D G B     taken from original song with the same tuning. No    capo, based on a czech chord  Kirken - Zejtra Mám  Kirken - Zejtra Mám  Kirken - Zejtra Mám     SPECIAL    SPECIAL  For      annual access to Ultimate  SPECIAL     SPECIAL    SPECIAL  For      annual access to Ultimate  SPECIAL  all as  for your                  pro               Kirken - Zejtra Mám  Kirken - Zejtra Mám  Kirken - Zejtra Mám                  \brk
+\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám, jé.
 \endchorus\endsong
