--- a/songs/Zejtra_Mám.tex
+++ b/songs/Zejtra_Mám.tex
@@ -1,5 +1,5 @@
 \sclearpage\beginsong{Zejtra Mám}[by={Ready Kirken}]
-\beginverse*{\nolyrics Intro: \[C] \[Bm]   \[Em]   \[G] \[Em]   \[A] \[Em]   \[A] \[B]         \brk\[A] \[C#m]    \[F#m]    \[E] \[D] \[C#m]    \[Bm]   \[E]         \brk
+\beginverse*{\nolyrics Intro: \[C] \[Bm]   \[Em]   \[G] \[Em]   \[A] \[Em]   \[A] \[B7]         \brk\[A] \[C#m]    \[F#m]    \[E] \[D] \[C#m]    \[Bm]   \[E]         \brk
 }\endverse
 \beginverse
 Zejtra \[G]mám, zejtra \[Bm]mám svůj \[Em]den. \[D]         \brk
@@ -12,8 +12,8 @@ Všude \[G]tam, kam se podí\[Bm]vám, něco z tebe \[Em]mám. \[D]         \brk
 Tak se mi \[C]zdá, tak se mi \[Em]zdá, že už asi  \[A]zejtra nebudu  \[D]sám.\brk
 \endverse
 \beginchorus
-Nebudu  \[C]sám nebudu  \[Bm]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
-\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B]jééé\brk
+Nebudu  \[C]sám nebudu  \[B7]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
+\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B7]jééé\brk
 \endchorus
 \beginverse
 Zejtra \[G]mám, zejtra \[Bm]mám svůj \[Em]den. \[D]         \brk
@@ -22,13 +22,13 @@ Všude \[G]tam, kam se podí\[Bm]vám, něco z tebe \[Em]mám. \[D]         \brk
 Poslední \[C]den jednou vyspím se \[Em]jen a pak už \[A]nikdy nebudu \[D]sám.\brk
 \endverse
 \beginchorus
-Nebudu  \[C]sám nebudu  \[Bm]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
-\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B]jééé\brk
+Nebudu  \[C]sám nebudu  \[B7]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
+\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B7]jééé\brk
 \[D]  \[C#m]        \[Bm]      \[E]         \brk
 \endchorus
 \beginchorus
-Nebudu  \[C]sám nebudu  \[Bm]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
-\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B]jééé\brk
-Nebudu  \[C]sám nebudu  \[Bm]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
+Nebudu  \[C]sám nebudu  \[B7]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
+\[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám,  \[B7]jééé\brk
+Nebudu  \[C]sám nebudu  \[B7]sám, zejtra tě  \[Em]máááá \[G]ám,\brk
 \[Em]máááá \[A]ám,  \[Em]mááááá \[A]ám, jé.
 \endchorus\endsong
