--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Mar  6 11:13:12 UTC 2023 by link-doc
+% Automatically generated at Mon Mar  6 21:16:47 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -138,6 +138,7 @@
 \input{songs/Wonderwall}
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
+\input{songs/Zejtra_Mám}
 \input{songs/Zombie}
 \input{songs/Čarodějnice_Z_Amesbury}
 \input{songs/Černí_andělé}
