New songs in pdf.

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Mon Mar  6 22:43:02 CST 2023 by link-doc
+% Automatically generated at Sat Mar 11 12:26:25 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -59,6 +59,7 @@
 \input{songs/Každý_Ráno}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Když_Nemůžeš_Tak_Přidej}
+\input{songs/Klára}
 \input{songs/Krátke_Lásky}
 \input{songs/Kráľovna_Bielych_Tenisiek}
 \input{songs/Kupte_Si_Hřebeny}
@@ -71,6 +72,7 @@
 \input{songs/Let_It_Go}
 \input{songs/Living_Next_Door_To_Alice}
 \input{songs/Láska_Na_Vsi}
+\input{songs/Lásko_Má_Já_Stůňu}
 \input{songs/Magdálena}
 \input{songs/Malování}
 \input{songs/Malá_Dáma}
@@ -103,9 +105,11 @@
 \input{songs/Pompeii}
 \input{songs/Proklínám}
 \input{songs/Proměny}
+\input{songs/Radioactive}
 \input{songs/Ring-O-Ding}
 \input{songs/Riptide}
 \input{songs/Ráda_Se_Miluje}
+\input{songs/Sametová}
 \input{songs/Sbohem_Galánečko}
 \input{songs/Sbírka_Zvadlejch_Růží}
 \input{songs/Slzy_Tvý_Mámy}
@@ -128,6 +132,7 @@
 \input{songs/V_Lese}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
+\input{songs/Voda_Živá}
 \input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
 \input{songs/Včelín}
@@ -139,8 +144,8 @@
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
 \input{songs/Zejtra_Mám}
+\input{songs/Země_Vzdálená}
 \input{songs/Zombie}
-\input{songs/Čarodějnice_Z_Amesbury}
 \input{songs/Černí_andělé}
 \input{songs/Černý_Brejle}
 \input{songs/Šaman}
@@ -152,6 +157,7 @@
 \input{songs/ŽŽ_DomcaSongs/Let_My_Love_Open_The_Door}
 \input{songs/ŽŽ_DomcaSongs/Mandy}
 \input{songs/ŽŽ_DomcaSongs/Mmm_Mmm_Mmm_Mmm}
+\input{songs/ŽŽ_DomcaSongs/Starý_Příběh}
 \input{songs/ŽŽ_DomcaSongs/Sweet_Child_O_Mine}
 \input{songs/ŽŽ_DomcaSongs/Take_It_Easy}
 \input{songs/ŽŽ_DomcaSongs/The_Weight}
@@ -161,11 +167,13 @@
 \input{songs/ŽŽ_HonzikSongs/Love_Again}
 \input{songs/ŽŽ_HonzikSongs/Matfyzák_Na_Discu}
 \input{songs/ŽŽ_HonzikSongs/Sweater_Weather}
+\input{songs/ŽŽ_HonzikSongs/The_Islander}
 \input{songs/ŽŽ_HonzikSongs/The_Middle}
 \input{songs/ŽŽ_KikiSongs/AA_intro}
 \input{songs/ŽŽ_KikiSongs/Shallow}
 \input{songs/ŽŽ_LuckaSongs/AA_intro}
 \input{songs/ŽŽ_LuckaSongs/The_Saga_Begins}
+\input{songs/ŽŽ_LuckaSongs/Čarodějnice_Z_Amesbury}
 \input{songs/ŽŽ_YbokemSongs/1_Plus_1}
 \input{songs/ŽŽ_YbokemSongs/AA_intro}
 \input{songs/ŽŽ_YbokemSongs/Ayo_Technology}
