--- a/songs/Pohoda.tex
+++ b/songs/Pohoda.tex
@@ -2,30 +2,30 @@
 \beginverse                                           \[A] \[E] \[Bm]  \[D] \[A] \[E] \[Bm]  \[D] \[A] \[Bm]         \brk
 \[F#m]Vezmu tě má milá  \[C#m]rovnou k nám\brk
 \[F#m]Kolem louky, lesy,  \[C#m]hejna vran\brk
-\[F#m]Všude samá  \[E]kráva, samej  \[B7]vůl\brk
+\[F#m]Všude samá  \[E]kráva, samej  \[Bm]vůl\brk
 \[F#m]Máme kino máme \[C#m]hospodu\brk
 \[F#m]V obci všeobecnou \[C#m]pohodu\brk
-\[F#m]Máme hujer, \[E]žito, chléb i \[B7]sůl\brk
+\[F#m]Máme hujer, \[E]žito, chléb i \[Bm]sůl\brk
 \[D]Když se u nás chlapi  \[A]poperou, tak jenom  \[E]nožem anebo  \[Bm]sekerou.\brk
 V zimě tam \[D] dlouhý noci \[A] jsou a tuhej \[Bm] mráz (a tam já to mám rád).\brk
 \[D]Jak jsou naše cesty  \[A]zavátý, tak vezmem  \[E]vidle a nebo  \[Bm]lopaty,\brk
 když něco \[D] nejde, co na tom \[A] sejde my máme \[Bm] čas.\brk
 \[F#m]Chlapi někdy trochu p\[C#m]rudký jsou\brk
 \[F#m]Holky s motykama \[C#m]tancujou\brk
-\[F#m]S ranní rosou \[E]táhnou do \[B7]polí\brk
+\[F#m]S ranní rosou \[E]táhnou do \[Bm]polí\brk
 \[F#m]Nikdo se tam  nikam \[C#m]nežene\brk
 \[F#m]Máme traktory a \[C#m]ne že ne\brk
-\[F#m]Až to spatří\[E]š, ledy po\[B7]volí\brk
+\[F#m]Až to spatří\[E]š, ledy po\[Bm]volí\brk
 \[D]Když se u nás chlapi  \[A]poperou, tak jenom  \[E]nožem anebo  \[Bm]sekerou.\brk
 V zimě tam \[D] dlouhý noci \[A] jsou a tuhej \[Bm] mráz (a tam já to mám rád).\brk
 \[D]Jak jsou naše cesty  \[A]zavátý, tak vezmem  \[E]vidle a nebo  \[Bm]lopaty,\brk
 když něco \[D] nejde, co na tom \[A] sejde my máme \[Bm] čas.\brk
 \[F#m]Hoří les a hoří \[C#m]rodnej dům\brk
 \[F#m]Hoří velkostatek \[C#m]sousedům\brk
-\[F#m]To je smůla,\[E] drahá podí\[B7]vej\brk
+\[F#m]To je smůla,\[E] drahá podí\[Bm]vej\brk
 \[F#m]Hasiči to stejně \[C#m]přejedou\brk
 \[F#m]Hlavně si moc dobře \[C#m]nevedou\brk
-\[F#m]Schovej sirky,\[E] ať je ne\[B7]viděj\brk
+\[F#m]Schovej sirky,\[E] ať je ne\[Bm]viděj\brk
 \[D]Když se u nás chlapi  \[A]poperou, tak jenom  \[E]nožem anebo  \[Bm]sekerou.\brk
 V zimě tam \[D] dlouhý noci \[A] jsou a tuhej \[Bm] mráz (a tam já to mám rád).\brk
 \[D]Jak jsou naše cesty  \[A]zavátý, tak vezmem  \[E]vidle a nebo  \[Bm]lopaty,\brk
