--- a/songs/Zejtra_Mám.tex
+++ b/songs/Zejtra_Mám.tex
@@ -4,10 +4,10 @@
 \beginverse
 Zejtra \[G]mám, zejtra \[Bm]mám svůj \[Em]den. \[D]         \brk
 Zejtra se mi \[C]splní moje tajný  \[Em]přání můj  \[Am]sen. \[D]         \brk
-Dlouho tě \[G]znám, dlouho tě \[Bm]znám, mám tě\[Em] rád.\brk
+Dlouho tě \[G]znám, dlouho tě \[Bm]znám, mám tě\[Em]\[D] rád.\brk
 Uvidím tě \[C]zas, uslyším tvůj\[Em] hlas\[Am], možn\[D]á...\brk
 Zejtra \[G]mám, zejtra \[Bm]mám svůj \[Em]den. \[D]         \brk
-Asi to tak \[C]bude, je to cejtit \[Em]všude, je to cejtit \[Am]všude.\brk
+Asi to tak \[C]bude, je to cejtit \[Em]všude, je to cejtit \[Am]všude\[D].\brk
 Všude \[G]tam, kam se podí\[Bm]vám, něco z tebe \[Em]mám. \[D]         \brk
 Tak se mi \[C]zdá, tak se mi \[Em]zdá, že už asi  \[A]zejtra nebudu  \[D]sám.\brk
 \endverse
