--- a/songs/1_Signální.tex
+++ b/songs/1_Signální.tex
@@ -1,4 +1,4 @@
-\sclearpage\beginsong{1 Signální}[by={Chinaski}]\capo{1}
+\sclearpage\beginsong{1 Signální}[by={Chinaski}]
 \beginverse
 Až si \[G]zejtra ráno \[C]řeknu zase \[Em]jednou provždy dost\brk
 \[G]právem se mi \[C]budeš tiše \[Em]smát\brk
