--- a/songs/Cats_In_The_Cradle.tex
+++ b/songs/Cats_In_The_Cradle.tex
@@ -20,7 +20,7 @@ My \[E]son turned ten just the \[G]other day\brk
 He said \[A]thanks for the ball dad, c'\[E]mon let's play\brk
 Can you \[E]teach me to throw, I said  \[G]today;  \brk
 And he, he walked away but his s\[D]mile never d\[D/C#]immed, he sa\[D/B]id          \[D/A]         \brk
-You \[G]know I'm gonna \[G/F#]be like \[E]him\quot;\brk
+You \[G]know I'm gonna \[G/F#]be like \[E]him\brk
 \endverse
 \beginchorus
 And the \[E]cats in the cradle and the \[D]silver spoon\brk
@@ -33,7 +33,7 @@ And the \[E]cats in the cradle and the \[D]silver spoon\brk
 Well, he \[E]came home college just the \[G]other day\brk
 So \[A]much like a man, I just \[E]had to say\brk
 He shook \[E]his head and he said with a smile                             \[A]                      \[E]         \brk
-\[D/G]See you la\[D/F#]ter, can I ha\[E]ve them please?\quot;\brk
+\[D/G]See you la\[D/F#]ter, can I ha\[E]ve them please?\brk
 \endverse
 \beginchorus
 And the \[E]cats in the cradle and the \[D]silver spoon\brk
