--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sat Mar 11 12:26:25 CST 2023 by link-doc
+% Automatically generated at Sat Apr  1 09:13:45 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -20,6 +20,7 @@
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
 \input{songs/Bára}
 \input{songs/Cant_Help_Falling_In_Love}
+\input{songs/Cats_In_The_Cradle}
 \input{songs/Cesta}
 \input{songs/Cesta_Z_Města}
 \input{songs/Chci_Zas_V_Tobě_Spát}
