Minor repaires in songs.

--- a/songs/Dlouhej_Kouř.tex
+++ b/songs/Dlouhej_Kouř.tex
@@ -6,7 +6,7 @@
 naučím tě \[C]číst, naučím tě \[G]číst mezi \[D]řádky.\brk
 Pokušení \[C]znáš,\brk
 tak zapo\[G]meň cestu \[D]zpátky,\brk
-hmm... cestu \[C]zpátky.\brk
+hmm... cestu \[C]zpátky.\[G]\brk
 \endverse
 \beginverse
 \[D]Naše noc je mladá,\brk
@@ -31,7 +31,7 @@ Pudem \[C]nekonečně dlouhou\brk
 ukážu ti \[G]všechny svoje tajný \[D]skrýše.\brk
 Poletíme \[C]vejš, chvíli budem \[G]řvát,\brk
 chvíli budem \[D]tiše,\brk
-úplně \[C]tiše.\brk
+úplně \[C]tiše.\[G]\brk
 \endverse
 \beginverse
 \[D]Vezmu si tě celou, \brk
