Minor repaires in songs.

--- a/songs/Do_Nebe.tex
+++ b/songs/Do_Nebe.tex
@@ -5,9 +5,9 @@ Snad se \[G]nezlobíte\[D], snad mi to \[Emi]odpustíte\[C]. Vždyť víte, že 
 \endverse
 \beginchorus
 \[G]Do nebe,do nebe,do neb\[D]e,do nebe,do nebe,\[Em]do nebe,do nebe,\brk
-do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\brk
+do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\[C]\brk
 \[G]Do nebe,do nebe,do neb\[D]e,do nebe,do nebe,\[Em]do nebe,do nebe,\brk
-do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\brk
+do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\[C]\brk
 \endchorus
 \beginverse
 Halo \[G]pane\[D] ,nad střec\[Em]hami panelá\[C]ků až \[G]déšt ustan\[D]e,\brk
@@ -16,9 +16,9 @@ budu \[G]obdivován v očích \[D]půvabných dam ale \[Em]sám\[C]   pudu\brk
 \endverse
 \beginchorus
 \[G]Do nebe,do nebe,do neb\[D]e,do nebe,do nebe,\[Em]do nebe,do nebe,\brk
-do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\brk
+do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\[C]\brk
 \[G]Do nebe,do nebe,do neb\[D]e,do nebe,do nebe,\[Em]do nebe,do nebe,\brk
-do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\brk
+do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\[C]\brk
 \endchorus
 \beginverse
 Halo \[G]pane\[D] vy s \[Em]šedivými fousy\[C] jak \[G]poznat nepoz\[D]nané\brk
@@ -28,9 +28,9 @@ to bych \[Em]taky věděl \[C]rád vždyť chci\brk
 \endverse
 \beginchorus
 \[G]Do nebe,do nebe,do neb\[D]e,do nebe,do nebe,\[Em]do nebe,do nebe,\brk
-do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\brk
+do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\[C]\brk
 \[G]Do nebe,do nebe,do neb\[D]e,do nebe,do nebe,\[Em]do nebe,do nebe,\brk
-do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\brk
+do \[C]nebe,do nebe,\[G]do nebe,do nebe,do \[D]nebe,do nebe,do \[Em]nebezpečna\[C]\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
 \[C]Jsi moje vě\[C]čná ,úža\[C]sná  slečna.
