--- a/songs/Kutil.tex
+++ b/songs/Kutil.tex
@@ -9,6 +9,7 @@ Má jednu malinkatou chybu,\brk
 \endverse
 \beginverse*{\nolyrics [Bridge]: 
 A tak \[F#m]hledám holku sdílnou,\brk
+co by chtěla kluka s dílnou, \brk
 \[A]abych nebyl sám. \[B]\brk
 \[E]    \[F#m]     \[A]    \[E]    \[F#m]     \[A]    \[E]\brk
 }\endverse
@@ -23,6 +24,7 @@ Mám ženu, je mladá \[F#m]krásná chy\[A]trá přívětivá.\[E]\brk
 \endchorus
 \beginverse*{\nolyrics [Bridge]: 
 A tak \[F#m]hledám holku sdílnou,\brk
+co by chtěla kluka s dílnou, \brk
 \[A]abych nebyl sám. \[B]\brk
 }\endverse
 \endsong
