--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sat Apr  1 09:13:45 CEST 2023 by link-doc
+% Automatically generated at Sat Apr  1 11:07:34 CEST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -20,9 +20,7 @@
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
 \input{songs/Bára}
 \input{songs/Cant_Help_Falling_In_Love}
-\input{songs/Cats_In_The_Cradle}
 \input{songs/Cesta}
-\input{songs/Cesta_Z_Města}
 \input{songs/Chci_Zas_V_Tobě_Spát}
 \input{songs/Co_Z_Tebe_Bude}
 \input{songs/Darmoděj}
@@ -35,6 +33,7 @@
 \input{songs/Drive_By}
 \input{songs/Drobná_Paralela}
 \input{songs/Duše_Z_Gumy}
+\input{songs/Ententýky}
 \input{songs/Fair_Play}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
@@ -116,7 +115,6 @@
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Starý_Muž}
-\input{songs/Stitches}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sáro}
 \input{songs/Thinking_Out_Loud}
@@ -179,8 +177,11 @@
 \input{songs/ŽŽ_YbokemSongs/AA_intro}
 \input{songs/ŽŽ_YbokemSongs/Ayo_Technology}
 \input{songs/ŽŽ_YbokemSongs/Breakfast_At_Tiffanys}
+\input{songs/ŽŽ_YbokemSongs/Cats_In_The_Cradle}
+\input{songs/ŽŽ_YbokemSongs/Cesta_Z_Města}
 \input{songs/ŽŽ_YbokemSongs/Dont_Go_Breaking_My_Heart}
 \input{songs/ŽŽ_YbokemSongs/Jdevozem}
 \input{songs/ŽŽ_YbokemSongs/Not_Fair}
 \input{songs/ŽŽ_YbokemSongs/Runaway_Train}
+\input{songs/ŽŽ_YbokemSongs/Stitches}
 \input{songs/ŽŽŽ-endsongs}
